src/test/deca/syntax/invalid/not_provided/include_circulaire.decah
// Description:
//    Si on include le fichier courant, on doit lever une erreur,
//    au lieu de boucler infiniment.
//
//    [Lexicographie], Inclusion de fichier, p55
//
// Resultats:
//    Erreur dans le lexeur.
//    Ligne 14:35.
//
// Historique:
//    cree le 05/01/2022

#include "include_circulaire.decah"